Fix PermSize issue